# gtest-mocking-strategies

./: .gitignore  CMakeLists.txt  README.md  script.md
include/: free_functions.h  mock_injection.h  private_methods.h  timers.h
src/: free_functions.cc  hello_test.cc  mock_injection.cc  private_methods.cc  timers.cc  timers2.cc
